<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/new_email_activity_title"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/to_text_view"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="@dimen/title_text_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/view_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/subject_text_view"
        android:textSize="@dimen/title_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/view_color" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/compose_text_view"
        android:textSize="@dimen/title_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/checkbox_view"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/colorAccent"
            android:text="@string/send_button_view" />
    </LinearLayout>

</LinearLayout>