<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        app:title="@string/detailed_activity_title"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        />
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/subject_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/subject_message_pinterest"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sender_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/subject_text_view"
        android:layout_marginStart="@dimen/default_margin" />

    <TextView
        android:id="@+id/sender_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject_text_view"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_toRightOf="@id/sender_image_view"
        android:text="@string/sender_pinterest"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sender_name_text_view"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_toRightOf="@id/sender_image_view"
        android:text="@string/time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sender_image_view"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/message_pinterest"
        android:textSize="@dimen/content_text_size" />

</RelativeLayout>
</LinearLayout>